tiny spacing fix

--- a/app/assets/stylesheets/components/_recapcards.scss
+++ b/app/assets/stylesheets/components/_recapcards.scss
@@ -10,8 +10,8 @@
 .recapcards {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
-  grid-gap: 16px;
-  margin: 4rem 5vw;
+  grid-gap: 30px;
+  margin: 5px 5px;
   padding: 0;
   list-style-type: none;
 }
